# macaron

./: CMakeLists.txt  Config.cmake.in  DOCS.md  README.md
docs/: index.md
docs/facilities/fragmental/: alkane.doc.md  binary_sheep.doc.md  binary_sheep_alternative.doc.md  double_horse.doc.md  double_horse_reversed.doc.md  double_llama.doc.md  double_llama_reversed.doc.md  double_sheep.doc.md  double_sheep_reversed.doc.md  horse.doc.md  horse_reversed.doc.md  llama.doc.md  llama_reversed.doc.md  sheep.doc.md  sheep_reversed.doc.md
docs/facilities/judgmental/: derived_type.doc.md  equal.doc.md  equal_value.doc.md  inherit.doc.md  invalid.doc.md  same.doc.md  same_type.doc.md  valid.doc.md
docs/introduction/: hello_world.md
macaron/fragmental/: alkane.hpp  binary_sheep.hpp  binary_sheep_alternative.hpp  double_horse.hpp  double_horse_reversed.hpp  double_llama.hpp  double_llama_reversed.hpp  double_sheep.hpp  double_sheep_reversed.hpp  horse.hpp  horse_reversed.hpp  llama.hpp  llama_reversed.hpp  sheep.hpp  sheep_reversed.hpp
macaron/fragmental/amenity/: define_alkane.hpp  define_binary_sheep.hpp  define_binary_sheep_alternative.hpp  define_double_horse.hpp  define_double_horse_reversed.hpp  define_double_llama.hpp  define_double_llama_reversed.hpp  define_double_sheep.hpp  define_double_sheep_reversed.hpp  define_horse.hpp  define_horse_reversed.hpp  define_llama.hpp  define_llama_reversed.hpp  define_sheep.hpp  define_sheep_reversed.hpp  undef_alkane.hpp  undef_binary_sheep.hpp  undef_binary_sheep_alternative.hpp  undef_double_horse.hpp  undef_double_horse_reversed.hpp  undef_double_llama.hpp  undef_double_llama_reversed.hpp  undef_double_sheep.hpp  undef_double_sheep_reversed.hpp  undef_horse.hpp  undef_horse_reversed.hpp  undef_llama.hpp  undef_llama_reversed.hpp  undef_sheep.hpp  undef_sheep_reversed.hpp
macaron/fragmental/amenity/instances/: define_boolean_sheep.hpp  define_boolean_sheep_alternative.hpp  define_integer_horse.hpp  define_integer_horse_reversed.hpp  define_integer_llama.hpp  define_integer_llama_reversed.hpp  define_integer_negative_one_alkane.hpp  define_integer_one_alkane.hpp  define_integer_sheep.hpp  define_integer_sheep_reversed.hpp  define_integer_zero_alkane.hpp  define_integral_constant_horse.hpp  define_integral_constant_horse_reversed.hpp  define_integral_constant_llama.hpp  define_integral_constant_llama_reversed.hpp  define_integral_constant_negative_one_alkane.hpp  define_integral_constant_one_alkane.hpp  define_integral_constant_sheep.hpp  define_integral_constant_sheep_reversed.hpp  define_integral_constant_zero_alkane.hpp  undef_boolean_sheep.hpp  undef_boolean_sheep_alternative.hpp  undef_integer_horse.hpp  undef_integer_llama.hpp  undef_integer_negative_one_alkane.hpp  undef_integer_sheep.hpp  undef_integral_constant_horse_reversed.hpp  undef_integral_constant_llama_reversed.hpp  undef_integral_constant_negative_one_alkane.hpp  undef_integral_constant_sheep_reversed.hpp
macaron/judgmental/: derived_type.hpp  equal.hpp  equal_value.hpp  inherit.hpp  invalid.hpp  same.hpp  same_type.hpp  valid.hpp
macaron/judgmental/amenity/: define_derived_type.hpp  define_equal.hpp  define_equal_value.hpp  define_inherit.hpp  define_invalid.hpp  define_same.hpp  define_same_type.hpp  define_valid.hpp  undef_derived_type.hpp  undef_equal.hpp  undef_equal_value.hpp  undef_inherit.hpp  undef_invalid.hpp  undef_same.hpp  undef_same_type.hpp  undef_valid.hpp
macaron/ornamental/: construct.hpp  member.hpp  mono.hpp  template.hpp  type.hpp  value.hpp
macaron/ornamental/amenity/: define_construct.hpp  define_member.hpp  define_mono.hpp  define_template.hpp  define_type.hpp  define_value.hpp  undef_construct.hpp  undef_member.hpp  undef_mono.hpp  undef_template.hpp  undef_type.hpp  undef_value.hpp
macaron/rudimental/: check.hpp  conditional.hpp  get_second.hpp  identity.hpp  is_parenthesized.hpp  paste.hpp  probe.hpp  remove_parenthesis.hpp  static_assert.hpp  stringize.hpp  whitespace_separated_pair.hpp  whitespace_separated_triplet.hpp
tests/: fragmental.test.hpp  judgmental.test.hpp  ornamental.test.hpp  tests.cpp
